src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__activity_log_dispatch__activity_log_unknown_subagent_renders_no_chip.snap
---
source: src/tui/snapshot_tests/activity_log_dispatch.rs
expression: t.backend()
---
"╔═══════════════════════════════[ Activity Log ]═══════════════════════════════╗"
"║10:00:00 [S-abc123] [~] Dispatching subagent-mystery                          ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
